--- a/index.template.html
+++ b/index.template.html
@@ -5,9 +5,9 @@
     <title></title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="{{ .Www }}/resets.css" />
-    <link rel="stylesheet" href="{{ .Www }}/style.css" />
+    <link rel="stylesheet" href="{{ .Www }}/resets.css" rel="preload" as="style" />
+    <link rel="stylesheet" href="{{ .Www }}/style.css" rel="preload" as="style" />
+    <script src="{{ .Www }}/textfit.min.js"></script>
 </head>
 
 <body>
@@ -19,6 +19,15 @@
         <!-- Image -->
         <img id="post-image" src="{{ .ImageUrl }}" alt="post image" />
     </section>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            textFit(document.getElementById("title"), {
+                multiLine: true,
+                minFontSize: 10,
+                maxFontSize: 48,
+            });
+        });
+    </script>
 </body>
 
 </html>
