--- a/sample.html
+++ b/sample.html
@@ -12,20 +12,24 @@
 
 <body>
     <section id="main">
-        <!-- score -->
-        <p id="score">score: 0</p>
         <!-- Title -->
         <p id="title">Multi-stage builds and debugging scratch images</p>
+        <!-- Date -->
+        <p id="date">September 23 2023</p>
         <!-- Image -->
-        <img id="post-image" src="https://mypaintingclub.com/images/modules/main/219_5946_Bamsi.jpg" alt="post image" />
+        <img id="post-image"
+            src="https://img.freepik.com/free-vector/stylish-glowing-digital-red-lines-banner_1017-23964.jpg"
+            alt="post image" />
+        <!--Logo-->
+        <img id="logo" src="www/logo.png" alt="logo img" />
     </section>
 </body>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         textFit(document.getElementById("title"), {
             multiLine: true,
-            minFontSize: 10,
-            maxFontSize: 48,
+            minFontSize: 24,
+            maxFontSize: 64,
         });
     });
 </script>
