fix:lmao silly me

--- a/index.template.html
+++ b/index.template.html
@@ -17,7 +17,7 @@
         <!-- Date -->
         <p id="date">{{ .Date }}</p>
         <!-- Image -->
-        <img id="post-image" <img id="post-image" src="{{ .ImageUrl }}" alt="post image" />
+        <img id="post-image" src="{{ .ImageUrl }}" alt="post image" />
         <!--Logo-->
         <img id="logo" src="{{ .Www }}/logo.png" alt="logo img" />
     </section>
